# cctra

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  package.json
examples/plugins/: oauth-internal.js  openai-compatible.js
launcher/: Cargo.toml
launcher/src/: main.rs
scripts/: build-launcher.ps1  dev.ps1  package.ps1  publish.ps1
src/: index.ts  types.ts
src/canonical/: types.ts
src/commands/: add.ts  alias.ts  daemon.ts  edit.ts  ls.ts  model.ts  plugin.ts  rectify.ts  rename.ts  rm.ts  serve.ts  shared.ts  show.ts  switch.ts  test.ts  tier.ts
src/convert/common/: content-blocks.ts  extras.ts  reasoning.ts  system-prompt.ts  tool-calls.ts  usage.ts
src/convert/inbound/: anthropic-to-canonical.ts  chat-to-canonical.ts  responses-to-canonical.ts
src/core/: alias.ts  config.ts  migrate.ts  model-fetch.ts  namespace.ts  openrouter-models.ts  resolve.ts  routing.ts  source.ts
src/daemon/: install.ts  start.ts  status.ts  stop.ts
src/plugin/: contract.ts  host.ts  loader.ts  sandbox.ts
src/providers/: presets.ts
src/server/: anthropic-parser.ts  cancelable-fetch.ts  chat-parser.ts  error-status.ts  error.ts  keepalive.ts  responses-parser.ts  serve.ts  sse.ts  upstream.ts
src/tier/: builtin.ts  resolve.ts  store.ts
src/ui/: format.ts  prompts.ts  table.ts
src/utils/: fuzzy.ts  logger.ts  paths.ts  port-check.ts  xdg.ts
tests/: alias.test.ts  convert.test.ts  migrate.test.ts  port-check.test.ts  providers-presets.test.ts  rectify.test.ts  server.test.ts  switch.test.ts  xdg-migrate.test.ts
tests/integration/: mock-upstream.ts
(+23 files in other folders)
