[package]
name = "cctra-launcher"
version = "0.1.0"
edition = "2021"
description = "cctra daemon launcher (Windows) - hides console window, detaches bun process"
license = "MIT"

[[bin]]
name = "cctra-launcher"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
panic = "abort"
codegen-units = 1
